--- a/home.html
+++ b/home.html
@@ -10,14 +10,17 @@
 <body>
     <header>
         <nav>
-            <a href="home.html">Home
+            <a href="home.html">Home</a>
                 <a href="projects.html">Projects</a>
                 <a href="articles.html">Articles</a>
                 <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <h1>FRONT END DEVELOPER</h1>
+    <main>
+ <h1>FRONT END DEVELOPER</h1>
     <p>html only with proper layout, no styling</p>
+    </main>
+   
     <footer>
         <p>Copyright 2025</p>
     </footer>
